tests/snapshots/transactions/rich_details/exists_with_groups.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - transactions
    - rich-details
    - 482784abee65d18a09f457b8125f045580c12bfc462318b3f98337a8c77d2c66
    - "--from-group"
    - "3"
    - "--to-group"
    - "3"
---
success: true
exit_code: 0
----- stdout -----
{
  "contractInputs": [],
  "generatedOutputs": [],
  "inputSignatures": [],
  "scriptExecutionOk": true,
  "scriptSignatures": [],
  "unsigned": {
    "fixedOutputs": [
      {
        "address": "17cBiTcWhung3WDLuc9ja5Y7BMus5Q7CD9wYBxS1r1P2R",
        "attoAlphAmount": "1000000000000000000000000",
        "hint": 1022114513,
        "key": "5d892f71e43b262733eaa99188a14f017fe006188f76cc0cc6ff8a0eb1ebab47",
        "lockTime": 1636379973000,
        "message": "d55dedab77b982ade743516f96d9c4fe85f19cc85e64d02b81b67532ce72df48",
        "tokens": []
      }
    ],
    "gasAmount": 20000,
    "gasPrice": "100000000000",
    "inputs": [],
    "networkId": 4,
    "scriptOpt": null,
    "txId": "482784abee65d18a09f457b8125f045580c12bfc462318b3f98337a8c77d2c66",
    "version": 0
  }
}

----- stderr -----
