tests/snapshots/transactions/rich_details/no_params.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - transactions
    - rich-details
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: the following required arguments were not provided:
  <TX_ID>

Usage: kermit transactions rich-details <TX_ID>

For more information, try '--help'.
