tests/snapshots/transactions/rich_details/not_exists.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - transactions
    - rich-details
    - b2dcb7c16a2846a857568547b775db5217f243102285b73a7c1852f4495e7a36
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Transaction b2dcb7c16a2846a857568547b775db5217f243102285b73a7c1852f4495e7a36 not found
